--- a/src/app/pageNotFound/pageNotFound.component.css
+++ b/src/app/pageNotFound/pageNotFound.component.css
@@ -52,8 +52,8 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  paddig-top: 64px;
-  paddig-bottom: 64px;
+  padding-top: 64px;
+  padding-bottom: 64px;
 }
 
 .boo {
