Corrigindo extensões do upload de imagens dos itens.

--- a/src/app/item/item.form.component.html
+++ b/src/app/item/item.form.component.html
@@ -246,7 +246,7 @@
               [showUploadButton]="false"
               chooseLabel="Inserir Imagens"
               cancelLabel="Remover"
-              accept="image/*"
+              accept="image/png, image/jpeg, image/jpg, image/webp"
               maxFileSize="1000000"
             >
               <ng-template pTemplate="content">
