--- a/src/app/cadastrarUsuario/cadastrarUsuario.component.html
+++ b/src/app/cadastrarUsuario/cadastrarUsuario.component.html
@@ -52,7 +52,7 @@
               <div class="col-md-6">
                 <mat-form-field style="width: 100%">
                   <mat-label for="email"
-                    >Email (@utfpr ou @alunos.utfpr)</mat-label
+                    >Email (&#64;utfpr ou &#64;alunos.utfpr)</mat-label
                   >
                   <input
                     type="email"
