Ajustes no layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <section>
   <div class="row" style="min-height: 100vh">
-    
+
       <div *ngIf="isAuthenticated" class="col-12">
         <app-toolbar></app-toolbar>
       </div>
-    
+
     <div
       *ngIf="isAuthenticated"
       class="col-2"
@@ -15,17 +15,17 @@
     </div>
     <div
       class="col-10"
-      [ngClass]="isAuthenticated ? 'content' : 'only-login'"
+      [ngClass]="isAuthenticated ? 'content row' : 'only-login'"
       id="content"
     >
       <p-scrollPanel
-        [style]="{ width: '100%', height: 'calc(100vh - 40px)' }"
+        [style]="{ width: '100%', height: 'calc(100vh - 40px)', verticalAlign: 'top' }"
         styleClass="scrool-table-dash"
       >
         <router-outlet></router-outlet>
         <app-loader></app-loader>
       </p-scrollPanel>
-    </div>    
+    </div>
   </div>
 </section>
 <p-toast></p-toast>
