--- a/src/app/item/item.form.component.html
+++ b/src/app/item/item.form.component.html
@@ -6,7 +6,7 @@
           <app-voltar (onClick)="back()"></app-voltar>
           <h4 class="m-0">Cadastro de Item</h4>
         </div>
-        <div *ngIf="object.id != null">
+        <div *ngIf="object.id != null" style="margin-right: 50px">
           <button
             type="button"
             pTooltip="Imagens"
